package Objetos;

public class Desmayo {
}
